--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,21 @@ repositories {
             password = System.getenv("NN_GITHUB_ACCESS_TOKEN")
         }
     }
+    maven {
+        url = uri("https://maven.pkg.github.com/niteknightt/chess_uciclientmod")
+        credentials {
+            username = System.getenv("NN_GITHUB_USER")
+            password = System.getenv("NN_GITHUB_ACCESS_TOKEN")
+        }
+    }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'niteknightt.chess:common:0.2'
+    implementation 'niteknightt.chess:common:0.2.007'
+    implementation 'niteknightt.chess:uciclientmod:0.3'
 }
 
 test {
@@ -46,7 +54,7 @@ publishing {
         gpr(MavenPublication) {
             groupId='niteknightt.chess'
             artifactId='lichessapi'
-            version='0.2'
+            version='0.2.003'
             from(components.java)
         }
     }
