--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'com.google.protobuf' version '0.9.4'
+    id 'scala'
 }
 
 java {
@@ -15,9 +17,7 @@ archivesBaseName = 'chess-lichessapi'
 
 repositories {
     mavenCentral()
-}
 
-repositories {
     maven {
         url = uri("https://maven.pkg.github.com/niteknightt/chess_common")
         credentials {
@@ -32,6 +32,7 @@ repositories {
             password = System.getenv("NN_GITHUB_ACCESS_TOKEN")
         }
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -40,6 +41,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'niteknightt.chess:common:0.3.001'
     implementation 'niteknightt.chess:uciclientmod:0.4.000'
+    implementation 'com.google.protobuf:protobuf-java:3.25.3'
+    implementation 'com.google.protobuf:protobuf-java-util:3.25.3'  // <--- add this
+    implementation 'com.github.bhlangonijr:chesslib:1.3.4'
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.25.3"
+    }
 }
 
 test {
